--- a/src/fxml/AnimatedHelp.fxml
+++ b/src/fxml/AnimatedHelp.fxml
@@ -2,7 +2,7 @@
 
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXProgressBar?>
-<?import javafx.scene.control.Label?>
+<?import com.jfoenix.controls.JFXTextArea?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="mainPane" minHeight="400.0" minWidth="800.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.AnimatedHelpController">
+<AnchorPane fx:id="mainPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.AnimatedHelpController">
    <children>
       <Pane opacity="0.56" prefHeight="460.0" prefWidth="860.0" style="-fx-background-color: white;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
       <GridPane layoutX="23.0" layoutY="58.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
@@ -21,24 +21,23 @@
         </columnConstraints>
         <rowConstraints>
           <RowConstraints maxHeight="1.7976931348623157E308" minHeight="30.0" vgrow="ALWAYS" />
-          <RowConstraints vgrow="NEVER" />
+          <RowConstraints vgrow="ALWAYS" />
           <RowConstraints maxHeight="1.7976931348623157E308" minHeight="30.0" vgrow="ALWAYS" />
         </rowConstraints>
          <children>
             <AnchorPane prefHeight="400.0" prefWidth="800.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
                <children>
-                  <JFXButton fx:id="nextButton" layoutX="489.0" layoutY="308.0" onAction="#nextPressed" prefHeight="50.0" prefWidth="150.0" text="Next" AnchorPane.bottomAnchor="50.0" AnchorPane.rightAnchor="50.0" />
-                  <JFXButton fx:id="previousButton" layoutX="48.0" layoutY="308.0" onAction="#previousPressed" prefHeight="50.0" prefWidth="150.0" text="Previous" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="50.0" />
-                  <Label fx:id="helpTextLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="359.0" layoutY="180.0" styleClass="text-on-white" text="Label" textAlignment="CENTER">
+                  <JFXTextArea fx:id="helpTextArea" editable="false" layoutX="270.0" layoutY="142.0" prefHeight="116.0" prefWidth="300.0" styleClass="text-on-white" text="Help">
                      <font>
-                        <Font size="33.0" />
+                        <Font size="24.0" />
                      </font>
-                  </Label>
-                  <JFXProgressBar fx:id="helpProgress" layoutX="236.0" layoutY="323.0" prefHeight="5.0" prefWidth="329.0" progress="0.0" />
-               </children>
-            </AnchorPane>
+                  </JFXTextArea>
+                  <JFXButton fx:id="returnButton" layoutX="-36.0" layoutY="36.0" onAction="#returnPressed" prefHeight="50.0" prefWidth="100.0" text="Return" />
+                  <JFXButton fx:id="previousButton" layoutX="14.0" layoutY="336.0" onAction="#previousPressed" prefHeight="50.0" prefWidth="150.0" text="Previous" />
+                  <JFXProgressBar fx:id="helpProgress" layoutX="236.0" layoutY="359.0" prefHeight="5.0" prefWidth="329.0" progress="0.0" />
+                  <JFXButton fx:id="nextButton" layoutX="636.0" layoutY="336.0" onAction="#nextPressed" prefHeight="50.0" prefWidth="150.0" text="Next" />
+               </children></AnchorPane>
          </children>
       </GridPane>
-      <JFXButton fx:id="returnButton" onAction="#returnPressed" prefHeight="50.0" prefWidth="100.0" text="Return" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="120.0" />
    </children>
 </AnchorPane>
