--- a/src/fxml/Path.fxml
+++ b/src/fxml/Path.fxml
@@ -51,39 +51,39 @@
             <Font size="18.0" />
          </font>
       </TitledPane>
-      <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="250.0">
+      <VBox alignment="CENTER" layoutX="911.0" layoutY="98.0" prefHeight="448.0" prefWidth="100.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="98.0">
          <children>
-            <JFXButton fx:id="btnzin" onAction="#zinPressed" prefHeight="50.0" prefWidth="50.0" text="+">
-               <font>
-                  <Font size="24.0" />
-               </font>
-            </JFXButton>
-            <JFXSlider fx:id="slideBarZoom" blockIncrement="0.0" disable="true" max="1.8" min="0.2" orientation="VERTICAL" prefWidth="50.0" value="1.0" />
-            <JFXButton fx:id="btnzout" onAction="#zoutPressed" prefHeight="50.0" prefWidth="50.0" text="-">
-               <font>
-                  <Font size="24.0" />
-               </font>
-            </JFXButton>
+            <AnchorPane prefHeight="765.0" prefWidth="122.0">
+               <children>
+                  <JFXButton fx:id="questionButton" contentDisplay="TOP" layoutX="22.0" layoutY="72.0" onAction="#questionPressed" text="Help">
+                     <graphic>
+                        <ImageView fitHeight="80.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../images/Icons/helpWhite.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                  </JFXButton>
+                  <JFXButton fx:id="btnzin" layoutX="36.0" layoutY="206.0" onAction="#zinPressed" prefHeight="50.0" prefWidth="50.0" text="+">
+                     <font>
+                        <Font size="24.0" />
+                     </font>
+                  </JFXButton>
+                  <JFXSlider fx:id="slideBarZoom" blockIncrement="0.0" disable="true" layoutX="36.0" layoutY="257.0" max="1.8" min="0.2" orientation="VERTICAL" prefWidth="50.0" value="1.0" />
+                  <JFXButton fx:id="btnzout" layoutX="36.0" layoutY="397.0" onAction="#zoutPressed" prefHeight="50.0" prefWidth="50.0" text="-">
+                     <font>
+                        <Font size="24.0" />
+                     </font>
+                  </JFXButton>
+                  <JFXButton fx:id="btnReverse" layoutX="8.0" layoutY="475.0" onAction="#reversePressed" prefHeight="61.0" prefWidth="106.0" text="Reverse">
+                     <font>
+                        <Font size="20.0" />
+                     </font>
+                  </JFXButton>
+               </children>
+            </AnchorPane>
          </children>
       </VBox>
-      <AnchorPane layoutX="918.0" layoutY="105.0" prefHeight="453.0" prefWidth="128.0" AnchorPane.rightAnchor="0.0">
-         <children>
-            <JFXButton fx:id="btnReverse" layoutX="11.0" layoutY="378.0" onAction="#reversePressed" prefHeight="61.0" prefWidth="106.0" text="Reverse">
-               <font>
-                  <Font size="20.0" />
-               </font>
-            </JFXButton>
-            <JFXButton fx:id="questionButton" contentDisplay="TOP" layoutX="3.0" layoutY="4.0" onAction="#questionPressed" text="Help">
-               <graphic>
-                  <ImageView fitHeight="80.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../images/Icons/helpWhite.png" />
-                     </image>
-                  </ImageView>
-               </graphic>
-            </JFXButton>
-         </children>
-      </AnchorPane>
       <AnchorPane maxHeight="100.0" minHeight="100.0" minWidth="800.0" prefHeight="100.0" styleClass="pane" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
          <children>
             <GridPane alignment="CENTER" minWidth="800.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
