--- a/src/fxml/Main.fxml
+++ b/src/fxml/Main.fxml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -9,12 +11,27 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.text.Font?>
 
-<Pane fx:id="mainPane" minHeight="400.0" minWidth="800.0" styleClass="pane" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.MainController">
+<Pane fx:id="mainPane" minHeight="400.0" minWidth="800.0" styleClass="pane" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.MainController">
    <children>
       <AnchorPane fx:id="mainAnchorPane" layoutX="-5.0" minHeight="400.0" minWidth="800.0" styleClass="pane">
          <children>
+            <Button accessibleRole="IMAGE_VIEW" layoutX="436.0" layoutY="382.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="76.0" prefWidth="209.0" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="10.0">
+               <graphic>
+                  <Label fx:id="time" alignment="CENTER" contentDisplay="BOTTOM" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="58.0" prefWidth="203.0" textAlignment="CENTER">
+                     <font>
+                        <Font size="19.0" />
+                     </font>
+                  </Label>
+               </graphic>
+            </Button>
             <StackPane AnchorPane.leftAnchor="45.0" AnchorPane.topAnchor="90.0" />
+            <Label alignment="CENTER" layoutX="577.0" layoutY="551.0" prefHeight="10.0" prefWidth="209.0" text="© Brigham and Women's Hospital" textFill="#fcfcfc" AnchorPane.bottomAnchor="14.0" AnchorPane.rightAnchor="14.0">
+               <font>
+                  <Font size="12.0" />
+               </font>
+            </Label>
             <GridPane fx:id="menuGridPane" layoutX="10.0" layoutY="190.0" prefHeight="480.0" prefWidth="85.0" AnchorPane.bottomAnchor="100.0" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="0.0">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -85,5 +102,6 @@
                </children>
             </GridPane>
          </children></AnchorPane>
+
    </children>
 </Pane>
