--- a/src/fxml/Request.fxml
+++ b/src/fxml/Request.fxml
@@ -90,7 +90,7 @@
                                 </AnchorPane>
                             </content>
                         </Tab>
-                        <Tab text="Settings">
+                        <Tab fx:id="settingsTab" text="Settings">
                             <content>
                                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                                     <children>
@@ -132,7 +132,7 @@
                                     </children></AnchorPane>
                             </content>
                         </Tab>
-                        <Tab text="Staff Management">
+                        <Tab fx:id="staffManageTab" text="Staff Management">
                             <content>
                                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                                     <children>
