--- a/src/fxml/Feedback.fxml
+++ b/src/fxml/Feedback.fxml
@@ -41,7 +41,7 @@
                                                         <Font size="39.0" />
                                                     </font>
                                                 </Label>
-                                                <JFXSlider fx:id="starSlider" majorTickUnit="1.0" max="5.0" minorTickCount="0" prefWidth="200.0" showTickLabels="true" showTickMarks="true" snapToTicks="true" styleClass="credit-text">
+                                                <JFXSlider fx:id="startSlider" majorTickUnit="1.0" max="5.0" minorTickCount="0" prefWidth="200.0" showTickLabels="true" showTickMarks="true" snapToTicks="true" styleClass="credit-text" value="1.0">
                                        <VBox.margin>
                                           <Insets top="20.0" />
                                        </VBox.margin></JFXSlider>
@@ -53,7 +53,7 @@
                                                         <Insets top="30.0" />
                                                     </VBox.margin>
                                                 </Label>
-                                                <TextArea prefHeight="200.0" prefWidth="400.0">
+                                                <TextArea fx:id="feedbackText" prefHeight="200.0" prefWidth="400.0">
                                                     <VBox.margin>
                                                         <Insets bottom="20.0" top="20.0" />
                                                     </VBox.margin>
